<resources>
    <string name="app_name">Inventario Anatel</string>
    <string name="edit_message">Número do patrimônio</string>
    <string name="reminder">Reminder name</string>
    <string name="done">Leitor</string>
    <string name="button_send">Ler</string>
    <string name="hint_teste">Teste</string>
    <string name="str_busca">Pesquisar</string>
    <string name="config">Configurações</string>
    <string name="importar">Importar arquivo</string>
    <string name="importarLocais">Importar arquivo de Locais</string>
    <string name="exportar">Exportar arquivo</string>
    <string name="hint_observacoes">Observações</string>
    <string-array name="setor">
        <item>UO7.1</item>
        <item>UO7.2</item>
        <item>UO7.3</item>
        <item>GR07</item>
    </string-array>
    <string-array name="setor_id">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="setor_default_id">1</string>

    <array name="status">
        <item>BOM</item>
        <item>OCIOSO</item>
        <item>ANTIECONOMICO</item>
        <item>IRRECUPERAVEL</item>
    </array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>


    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_find">FindActivity</string>
</resources>
