<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_import"
        android:title="@string/importar" />
    <item
        android:id="@+id/menu_export"
        android:title="@string/exportar" />
    <item
        android:id="@+id/menu_config"
        android:title="@string/config"
        android:orderInCategory="100"/>
    <item
        android:id="@+id/menu_import_locais"
        android:title="@string/importarLocais" />
    <item
        android:id="@+id/app_bar_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_list_item"
        android:title="@string/str_busca"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/app_bar_find"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/str_busca"
        app:showAsAction="ifRoom"/>

</menu>