<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/scan_content"
        android:layout_width="176dp"
        android:layout_height="43dp"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:hint="@string/edit_message"
        android:inputType="textPersonName|number"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/spnEndereco"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/scan_format"
        app:layout_constraintVertical_bias="0.235"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/scan_button"
        android:layout_width="68dp"
        android:layout_height="47dp"
        android:text="@string/button_send"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/scan_format"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/spnEndereco"
        android:layout_marginRight="-11dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.271" />

    <Button
        android:id="@+id/find_button"
        android:layout_width="71dp"
        android:layout_height="46dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="Ir"
        app:layout_constraintLeft_toRightOf="@+id/scan_content"
        android:layout_marginLeft="8dp"
        app:layout_constraintRight_toLeftOf="@+id/scan_button"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/spnEndereco"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/scan_format"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.267" />

    <TextView
        android:id="@+id/scan_format"
        android:layout_width="333dp"
        android:layout_height="98dp"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="8dp"
        android:text="Descrição"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="26dp"
        app:layout_constraintBottom_toTopOf="@+id/spnEstado" />

    <Spinner
        android:id="@+id/spnEndereco"
        android:layout_width="332dp"
        android:layout_height="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="3dp" />

    <Spinner
        android:id="@+id/spnEstado"
        android:layout_width="170dp"
        android:layout_height="32dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/txtObservacao"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="128dp"
        android:layout_height="53dp"
        android:text="Salvar"
        android:layout_marginRight="26dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="43dp" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancelar"
        app:layout_constraintRight_toLeftOf="@+id/btnSalvar"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.336"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="48dp" />

    <EditText
        android:id="@+id/txtObservacao"
        android:layout_width="315dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/hint_observacoes"
        android:inputType="textPersonName"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="63dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSalvar"
        app:layout_constraintHorizontal_bias="0.0" />

</android.support.constraint.ConstraintLayout>
